--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,3 +1,153 @@
 html, body, #root {
   height: 100%;
 }
+
+/* TODO rem breakpoints would be better than px breakpoints */
+
+/* These styles are specific to the layouts in this example, but an additional class 
+   should be included to associate them only with these layouts (i.e. fixed header, 2 page sections */
+.pf-c-page__main-section + .pf-c-page__main-section.pf-m-fill {
+  flex: 1 1 auto;
+  min-height: 0;
+}
+
+/* styles for layout of split view */
+.ha-c-tree-view:not(.ha-m-full-width) {
+  width: 35rem;
+}
+@media screen and (max-width: 70rem) {
+  .ha-c-tree-view:not(.ha-m-full-width) {
+    display: none;
+    visibility: hidden;
+  }
+}
+
+/* The tree view panel is designed to shrink and grow in height as the user expands/collapses nodes.
+   If the contents overflow the screen, the card touches the bottom. This is the max-height property.
+   The max-height is calculated from the height of the parent container plus the size of the bottom padding
+   of the page. */
+.pf-c-card.ha-c-panel__tree-view {
+  overflow: auto;
+  max-height: calc(100% + var(--pf-c-page__main-section--PaddingBottom));
+}
+/* The details panel is designed to fill the height regardless of height of contents.
+   If the contents do not need to scroll, then consistent padding displays around the edges of the card
+   But if the contents overflow the screen and require scrolling, then the card touches the bottom of the window. */
+.pf-c-card.ha-c-panel__details-view {
+  overflow: auto;
+  min-height: 100%;
+  max-height: calc(100% + var(--pf-c-page__main-section--PaddingBottom));
+}
+
+.ha-c-tree-view:not(.ha-m-full-width) .pf-c-data-list__item-row {
+  --pf-c-data-list__item-action--MarginLeft: var(--pf-global--spacer--md);
+} /* decreases horizontal spacing in split layout */
+
+/* Styles for extending the DataList to create a tree view */
+/* TODO: test that the toggle indentation works in IE. */
+.ha-c-tree-view.pf-c-data-list,
+.ha-c-tree-view .pf-c-data-list {
+  --pf-c-data-list__item-control--MarginRight: var(--pf-global--spacer--md);
+  --ha-c-data-list__toggle--TotalWidth: calc(1em + var(--pf-c-data-list__item-control--MarginRight) + (var(--pf-global--spacer--md)));
+} /* The second variable creates the spacing needed to indent the toggle by one level 
+     (i.e. the variable represents the size of one toggle, and therefore the size of the indentation)
+     The md spacer occurs twice for button padding, one on left and one on right, but
+     only one is used in the TotalWidth variable. 
+     The other instance of global--spacer--md is used for left margin on the data list itself */
+
+/* NOTE: additional rulesets are needed to support additional levels */
+[data-level="2"] .pf-c-data-list__toggle {
+  padding-left: var(--ha-c-data-list__toggle--TotalWidth);
+}
+[data-level="3"] .pf-c-data-list__toggle {
+  padding-left: calc(var(--ha-c-data-list__toggle--TotalWidth) *2);
+}
+[data-level="4"] .pf-c-data-list__toggle {
+  padding-left: calc(var(--ha-c-data-list__toggle--TotalWidth) *3);
+}
+.pf-c-data-list[data-level] {
+  margin-left: var(--pf-global--spacer--md);
+  --pf-c-data-list--BorderTopColor: transparent;
+  --pf-c-data-list--BorderBottomColor: transparent;
+}
+
+.ha-c-tree-view .pf-c-data-list__toggle {
+  border-right: var(--pf-global--BorderWidth--sm) solid var(--pf-c-data-list__item-item--BorderTopColor);
+}
+
+/* expand buttons are included for all nodes, but only visible for nodes with children */
+.pf-c-data-list__item-control[aria-hidden="true"] .pf-c-button {
+  visibility: hidden;
+}
+
+/* selected status is also included for all nodes, but only visible for the active node */
+.ha-c-tree-view__selected-status {
+  margin-left: var(--pf-c-data-list__item-action--MarginLeft);
+  padding-top: var(--pf-c-data-list__cell--PaddingTop);
+  color: var(--pf-global--active-color--100);
+  visibility: hidden;
+}
+.ha-c-tree-view__selected-status.ha-m-active {
+  visibility: visible;
+}
+
+.ha-c-tree-view .pf-c-data-list__cell + .pf-c-data-list__cell {
+  flex: 0 0 calc(45vw - 10rem);
+  margin-left: auto;
+  white-space: nowrap;
+} /* sets spacing for Type column */
+.ha-c-data-list__item-status {
+  flex: 0 0 10rem;
+  margin-left: auto;
+  padding-top: var(--pf-c-data-list__cell--PaddingTop);
+} /* sets spacing for Status column */
+
+@media screen and (max-width: 992px) {
+  .ha-c-tree-view .pf-c-data-list__item-content {
+    display: grid;
+    width: 100%;
+    grid-template-columns: auto 1fr;
+    padding-bottom: 0;
+  }
+  .ha-c-tree-view .pf-c-data-list__cell {
+    padding-bottom: var(--pf-global--spacer--xs);
+  }
+  .ha-c-tree-view .pf-c-data-list__cell + .pf-c-data-list__cell {
+    margin-left: 0;
+  }
+  .ha-c-tree-view .pf-c-data-list__cell:last-child {
+    padding-top: 0;
+    padding-bottom: var(--pf-global--spacer--md);
+  }
+}
+/* similar styles used for the max-width breakpoint above are used for the split screen */
+.ha-c-tree-view:not(.ha-m-full-width) .pf-c-data-list__item-content {
+  display: grid;
+  width: 100%;
+  grid-template-columns: auto 1fr;
+  padding-bottom: 0;
+}
+.ha-c-tree-view:not(.ha-m-full-width) .pf-c-data-list__cell {
+  padding-bottom: var(--pf-global--spacer--xs);
+}
+.ha-c-tree-view:not(.ha-m-full-width) .pf-c-data-list__cell + .pf-c-data-list__cell {
+  margin-left: 0;
+}
+.ha-c-tree-view:not(.ha-m-full-width) .pf-c-data-list__cell:last-child {
+  padding-top: 0;
+  padding-bottom: var(--pf-global--spacer--md);
+}
+/* In the split screen layout, only the status icon is visible. */
+.ha-c-tree-view:not(.ha-m-full-width) .ha-c-data-list__item-status {
+  flex-basis: 1rem;
+}
+.ha-c-tree-view:not(.ha-m-full-width) .ha-c-data-list__item-status svg + * {
+  position: fixed;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+} /* These property styles hide the text description of the status svg icon from the screen, */
+/* but keep contents accessible to assistive technology */
+
+
+
