--- a/src/app/app.css
+++ b/src/app/app.css
@@ -4,19 +4,21 @@ html, body, #root {
 
 /* TODO rem breakpoints would be better than px breakpoints */
 
-/* These styles are specific to the layouts in this example, but an additional class 
-   should be included to associate them only with these layouts (i.e. fixed header, 2 page sections */
-.pf-c-page__main-section + .pf-c-page__main-section.pf-m-fill {
+/* At larger viewport heights, the page header will be fixed, and scrolling in each panel is independent */
+@media screen and (min-height: 50rem) {
+.pf-c-page__main-section.pf-m-fill.ha-m-full-height {
   flex: 1 1 auto;
   min-height: 0;
+  height: 100%;
+}
 }
 
 /* styles for layout of split view */
-.ha-c-tree-view:not(.ha-m-full-width) {
+.ha-c-panel__tree-view {
   width: 35rem;
 }
 @media screen and (max-width: 70rem) {
-  .ha-c-tree-view:not(.ha-m-full-width) {
+  .ha-c-panel__tree-view {
     display: none;
     visibility: hidden;
   }
@@ -102,7 +104,7 @@ html, body, #root {
   padding-top: var(--pf-c-data-list__cell--PaddingTop);
 } /* sets spacing for Status column */
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 62rem) {
   .ha-c-tree-view .pf-c-data-list__item-content {
     display: grid;
     width: 100%;
